        documents are updated, all ghosts referencing them are also
        reindexed.

      - fixed 101064: revert to previous focus box in Content Publish
        screen remains available after reverting. The
        revert_to_previous functionality has been removed from Silva,
        since it was obsoleted by "manage versions"

    Bugfixes ported from 2.0 branch

      - silva_lookup_referer is stored in the session. If for some
        reason the session gets lost, that no longer results in an
        error.

      - lookup_search conditionally converts username to unicode. The
        name could come from a form, or from code, we don't know
        which, so we have to code defensively. :(

      - KeyError in tab_status_export fixed

      - Links to local (i.e. not fully qualified) domain names are no
        longer incorrectly converted to relative urls in rendered
        SilvaDocuments.

      - Special characters in titles are escaped in the tocrenderer
        adapter, to play nice with xslt rendering.

      - Fixed the factory function calls for File and Image, which
        still were still called with the spurious 'title' arguments on
        some code paths.

      - fixed WuW144: Images were not always shown correctly in kupu 
        when resized.

      - fixed 158381: Group objects should be removable even if the 
        groups service isn't installed.

      - fixed 158384: can't add groups: title error issue

      - fixed 157010: anchors in links: # -> %23

      - fixed wuw144: Incorrect caching of images. 
                      (was reverted in silva-2.0.3b1)

      - fixed 150809: sidebar cache not invalidated when folder
        removed

      - Adding Groups, Virtual Groups and IPGroups was broken.

      - creationdate is once again set on versioned content.

      - The lookup window allowed one to add content and assets to
        ghostfolders, which isn't really advisable. This is no longer
        possible.
